tests/aster/x/mochi/rosetta/eban-numbers.error
error[A003]: undefined variable b
  --> /workspace/mochi/tests/rosetta/x/Mochi/eban-numbers.mochi:10:19

 10 |           let n = b*1000000000 + m*1000000 + t*1000 + r
    |                   ^

help:
  Declare b before use
